// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`crossGameStyleLoader file exists 1`] = `
"<style scoped lang="scss" src="./css/gp.scss">
</style>"
`;

exports[`crossGameStyleLoader get styleName array from options 1`] = `
"<style scoped lang="scss" src="./css/pvp.scss">
</style>"
`;

exports[`crossGameStyleLoader get styleName from options 1`] = `
"<style scoped lang="scss" src="./css/gp.scss">
</style>"
`;

exports[`crossGameStyleLoader inexistent file 1`] = `
"<style scoped lang="scss" src="">
</style>"
`;

exports[`crossGameStyleLoader styleName is an array 1`] = `
"<style scoped lang="scss" src="">
</style><style scoped lang="scss">.gp {@import './css/gp.scss';}.pvp {@import './css/pvp.scss';}</style>"
`;
